Basic Button and InputField classes

--- a/BasicPasswordManager/BasicPasswordManager.vcxproj
+++ b/BasicPasswordManager/BasicPasswordManager.vcxproj
@@ -134,11 +134,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BasicPasswordManager.cpp" />
-    <ClCompile Include="External\AES.cpp" />
+    <ClCompile Include="Button.cpp" />
+    <ClCompile Include="External\AES\AES.cpp" />
+    <ClCompile Include="InputField.cpp" />
     <ClCompile Include="PasswordManager.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="External\AES.h" />
+    <ClInclude Include="Button.h" />
+    <ClInclude Include="External\AES\AES.h" />
+    <ClInclude Include="InputField.h" />
     <ClInclude Include="PasswordManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
