--- a/BasicPasswordManager/BasicPasswordManager.vcxproj.filters
+++ b/BasicPasswordManager/BasicPasswordManager.vcxproj.filters
@@ -18,18 +18,30 @@
     <ClCompile Include="BasicPasswordManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="External\AES.cpp">
+    <ClCompile Include="PasswordManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="PasswordManager.cpp">
+    <ClCompile Include="External\AES\AES.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Button.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="InputField.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="External\AES.h">
+    <ClInclude Include="PasswordManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="PasswordManager.h">
+    <ClInclude Include="External\AES\AES.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Button.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InputField.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
