Added basic UI functionality

--- a/BasicPasswordManager/BasicPasswordManager.vcxproj.filters
+++ b/BasicPasswordManager/BasicPasswordManager.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="InputField.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PasswordRow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PasswordManagerUI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PasswordManager.h">
@@ -42,6 +48,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="InputField.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PasswordRow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PasswordManagerUI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
