--- a/BasicPasswordManager/BasicPasswordManager.vcxproj
+++ b/BasicPasswordManager/BasicPasswordManager.vcxproj
@@ -138,12 +138,16 @@
     <ClCompile Include="External\AES\AES.cpp" />
     <ClCompile Include="InputField.cpp" />
     <ClCompile Include="PasswordManager.cpp" />
+    <ClCompile Include="PasswordManagerUI.cpp" />
+    <ClCompile Include="PasswordRow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
     <ClInclude Include="External\AES\AES.h" />
     <ClInclude Include="InputField.h" />
     <ClInclude Include="PasswordManager.h" />
+    <ClInclude Include="PasswordManagerUI.h" />
+    <ClInclude Include="PasswordRow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
